<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/miulogo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/sign_in_account"
        android:textColor="@color/black"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/roundshape"
        android:layout_margin="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            android:id="@+id/tv_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="48dp"
            android:layout_marginTop="24dp"
            android:text="@string/email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/et_name"
            android:layout_width="526dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_welcome" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/password"
            app:layout_constraintStart_toStartOf="@+id/tv_welcome"
            app:layout_constraintTop_toBottomOf="@+id/et_name" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="526dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="@+id/et_name"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/tv_forgot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textColor="@color/purple_500"
            android:text="@string/forgot_password"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <Button
            android:id="@+id/btn_signin"
            android:layout_width="526dp"
            android:layout_height="48dp"
            android:layout_marginTop="64dp"
            android:background="@drawable/roundshape"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot" />


        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:textColor="@color/black"
            android:text="@string/no_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_signin" />

        <Button
            android:id="@+id/btn_create"
            android:layout_width="526dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/roundshape"
            style="@style/Widget.AppCompat.Button.Colored"
            android:text="@string/create_account"
            android:textAllCaps="false"
            app:layout_constraintEnd_toEndOf="@+id/btn_signin"
            app:layout_constraintStart_toStartOf="@+id/btn_signin"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>